# todo_app

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_ARTIFACTS.md  context_awareness_test_readme.md  docker-compose.yml  features.md  integration_test.py  run.md  setup_neon_db.sh  summary.md  test_ambiguity_detection.py  test_ambiguous_requests.py  test_ambiguous_requests_simple.py  test_comprehensive_validation.py  test_context_awareness.py  test_context_awareness_simple.py  test_partial_information.py  todo.md
.specify/memory/: agent-context-claude.md  constitution.md
docs/: cli_contract.md
frontend/: .env.production  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/app/: AuthProviderWrapper.js  globals.css  layout.js  page.js
frontend/app/dashboard/: page.js
frontend/app/login/: page.js
frontend/src/: index.js
mcp-server/: pyproject.toml
mcp-server/src/: server.py
mcp-server/tools/: add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
specs/001-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fullstack-web-app-spec/: architecture.md  data-model.md  overview.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-chatbot/: plan.md  spec.md  tasks.md
specs/1-todo-spec/: spec.md  tasks.md
src/: __init__.py  __main__.py  config.py  errors.py  main.py
src/cli/: formatter.py  interface.py
src/models/: task_old.py.backup
src/services/: task_manager.py
(+45 files in other folders)
